[package]
name = "aiwaf_rust"
version = "0.1.0"
edition = "2021"
description = "Rust-powered WAF heuristics exposed to Python via PyO3"
license = "MIT"
readme = "README.md"
repository = "https://github.com/your-org/aiwaf-rust"
keywords = ["waf", "security", "python", "pyo3"]
categories = ["network-programming", "web-programming"]

[lib]
name = "aiwaf_rust"
crate-type = ["cdylib"]

[dependencies]
once_cell = "1"
pyo3 = { version = "0.21", features = ["extension-module"] }
regex = "1"
